Issues with web spacing on laptop fixed. Also adjusted case studies showing 1 per line on the case studies page. Took out password from the nft case study

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -5,7 +5,8 @@
     backdrop-filter: blur(28px);
     padding: 0 var(--paddings-page-padding);
     gap: var(--gaps-button-inner-gap);
-    width: var(--responsiveness-container_width);
+    max-width: var(--responsiveness-container_width);
+    width: 100%;
     top: 0;
 
     &bar {
