--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -129,7 +129,7 @@
                     &:last-child {
                         align-self: flex-end;
                         padding-right: var(--paddings-padding-body);
-                        width: 80%;
+                        width: 90%;
                     }
                 }
             }
